--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "Node.js and MongoDB shopping cart.",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Marius Zienius",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "express": "^4.15.3",
-    "mongoose": "^4.10.6"
+    "body-parser": "1.17.2",
+    "express": "4.15.3",
+    "mongoose": "4.10.6"
+  },
+  "engines": {
+    "node": "6.11.2"
   }
 }
